--- a/one_on_ones/weather-site/styles.css
+++ b/one_on_ones/weather-site/styles.css
@@ -1,28 +1,31 @@
-* {
-text-color: white;
+body {
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
 }
 
-body{
+#cloudy {
   background-image: url(https://gist.github.com/dm-wyncode/63763f460421122aab6bad7de00b0ac1/raw/d660cd094961bea222d6b2453aca2538f07ef62b/cloudy.jpg);
-  font-family: sans-serif;
+}
+
+#rainy {
+  background-image: url(https://gist.github.com/dm-wyncode/63763f460421122aab6bad7de00b0ac1/raw/d660cd094961bea222d6b2453aca2538f07ef62b/rainy.jpg);
+}
+
+#sunny {
+  background-image: url(https://gist.github.com/dm-wyncode/63763f460421122aab6bad7de00b0ac1/raw/d660cd094961bea222d6b2453aca2538f07ef62b/sunny.jpg);
 }
 
 .date {
-  display: flex;
-  justify-content: center;
-  color: white;
+
 }
 
 .location {
-  display: flex;
-  justify-content: center;
-  color: white;
+
 }
 
 .text_box {
-  display: flex;
-  justify-content: center;
-  color: white;
+
 }
 
 .text {
@@ -34,18 +37,18 @@ body{
 }
 
 .weather_description {
-  display: flex;
-  justify-content: center;
-  color: white;
+
 }
 
 .temp {
-  display: flex;
-  justify-content: center;
-  color: white;
   border: solid black 1px;
   width: 6em;
   margin: 1em auto 1em;
-  font-size: 2em;
+  font-size: 3rem;
+}
 
+@media all and (max-width: 360px) {
+  .temp {
+    color: #000;
+  }
 }
